# cmake_msvc_module_partitions

./: CMakeLists.txt
src/: m.ixx  m_part.cpp  m_part.ixx  main.cpp
