cmake_minimum_required(VERSION 3.24)

project(partitions)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPERIMENTAL_CXX_MODULE_CMAKE_API 3c375311-a3c9-4396-a187-3227ef642046)
set(CMAKE_EXPERIMENTAL_CXX_MODULE_DYNDEP 1)
string(CONCAT CMAKE_EXPERIMENTAL_CXX_SCANDEP_SOURCE
	"<CMAKE_CXX_COMPILER> <DEFINES> <INCLUDES> <FLAGS> <SOURCE>"
	" /nologo /showIncludes /scanDependencies <DYNDEP_FILE>"
	" /Fo:<OBJECT>"
)
set(CMAKE_EXPERIMENTAL_CXX_SCANDEP_DEPFILE_FORMAT "msvc")
set(CMAKE_EXPERIMENTAL_CXX_MODULE_MAP_FORMAT "msvc")
set(CMAKE_EXPERIMENTAL_CXX_MODULE_MAP_FLAG "@<MODULE_MAP_FILE>")

add_executable(partitions
	src/main.cpp
)
target_sources(partitions
	PRIVATE FILE_SET modules
	TYPE CXX_MODULES
	BASE_DIRS src
	FILES src/m.ixx src/m_part.ixx src/m_part.cpp
)
